# Nexfin-smart-contracts

./: .gitignore  Anchor.toml  Cargo.toml  package-lock.json
.github/workflows/: main.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
programs/nexfin/: Cargo.toml
programs/nexfin/src/: error.rs  helpers.rs  lib.rs  params.rs  pc.rs  state.rs
programs/nexfin/tests/: helper.rs  test_coin.rs  test_functions.rs  test_trove.rs
programs/nexfinFarm/: Cargo.toml
programs/nexfinFarm/src/: lib.rs
programs/nexfinSDK/: Cargo.toml
programs/nexfinSDK/src/: farm.rs  id.rs  lib.rs  log.rs  math.rs  pack.rs  pool.rs  refdb.rs  string.rs  token.rs  traits.rs  vault.rs
programs/nexfinSDK/src/instructions/: amm.rs  main_router.rs  mod.rs  raydium.rs  refdb.rs  vault.rs
programs/nexfinSDK/src/program/: account.rs  mod.rs  pda.rs
programs/nexfinSDK/src/program/protocol/: raydium.rs
programs/nexfinSwap/: Cargo.toml
programs/nexfinSwap/sim/: Cargo.toml
programs/nexfinSwap/sim/src/: lib.rs
programs/nexfinSwap/src/: constraints.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/nexfinSwap/src/curve/: base.rs  calculator.rs  constant_price.rs  constant_product.rs  fees.rs  mod.rs  offset.rs  stable.rs
programs/nexfin_old/src/: error.rs  instruction.rs  lib.rs  processor.rs
programs/stable-coin/: Cargo.toml
programs/stable-coin/src/: error.rs  lib.rs
src/: .helpers.rs.swp  error.rs  helpers.rs  instruction.rs  lib.rs  params.rs  processor.rs  state.rs
tests/: nexfin.ts  stable-coin.js  stable-coin.ts
tests/helpers/: accounts.ts  utils.ts
wallet/: admin.json  user.json
