[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyth-client = "0.2.2"
anyhow = "1.0"
clap = "2.33.3"
anchor-client = "0.18.0"
solana-sdk = "1.8.5"
nexfin-program  = { path = "../programs/nexfin"}
anchor-lang = "0.18.0"
telegram_notifyrs = "0.1.3"
shellexpand = "2.1.0"