[package]
name = "nexfin-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexfin_program"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = ["test-bpf"]
test-bpf = []

[dependencies]
anchor-lang = "0.18.0"
anchor-spl = { version = "0.18.0", features = ["devnet"] }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
thiserror = "1.0.24"
# chainlink = { git = "https://github.com/smartcontractkit/chainlink-solana", package = "chainlink-solana"}
arrayref = "0.3.6"
bytemuck = { version = "1.4.0" }



[dev-dependencies]
solana-program-test = "1.8.5"
solana-sdk = "1.8.5"
assert_matches = "1.5.0"
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }