[package]
name = "nexfinSwap"
version = "0.1.0"
description = "Solana program for swap"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nexfin_swap"

[features]
no-entrypoint = []
production = []
fuzz = ["arbitrary", "roots"]

[dependencies]
arrayref = "0.3.6"
enum_dispatch = "0.3.7"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.9.5"
spl-math = { version = "0.1", path = "../../libraries/math", features = [ "no-entrypoint" ] }
spl-token = { version = "3.3", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
roots = { version = "0.0.7", optional = true }

[dev-dependencies]
solana-sdk = "1.9.5"
proptest = "1.0"
sim =  { path = "./sim" }
roots = "0.0.7"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
